tdf#165438 for user created (raw) themes, use default document colors

Change-Id: I7d35617ac4a22e6d41cdad2fb6991ae9901284e1
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/182263
Reviewed-by: Sahil Gautam <sahil.gautam.extern@allotropia.de>
Tested-by: Jenkins
Reviewed-by: Patrick Luby <guibomacdev@gmail.com>